[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Cenários/Objects/Inside_D.png" type="Texture" id=1]
[ext_resource path="res://scenes/PhysicObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/InteractableObjects.gd" type="Script" id=3]
[ext_resource path="res://assets/Cenários/Objects/ExclamacaoIcon.png" type="Texture" id=4]
[ext_resource path="res://assets/Cenários/Objects/ExclamacaoIcon2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.0547, 4.15883 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.5, 42 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
} ]

[node name="QuadroMissões" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 615.569, 11.0664, 58.1187, 87.3872 )

[node name="Collision" parent="." index="1"]
position = Vector2( 1, -8 )
rotation = 0.00550163
scale = Vector2( 3.25941, -6.81987 )
shape = SubResource( 1 )

[node name="Collision" parent="InteractableArea" index="0"]
visible = false
shape = SubResource( 2 )

[node name="QuestMark" type="AnimatedSprite" parent="." index="3"]
visible = false
position = Vector2( 0, -40 )
frames = SubResource( 3 )
animation = "Idle"
playing = true

[connection signal="body_entered" from="InteractableArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="InteractableArea" to="." method="_on_body_exited"]
